email form update

--- a/EMailForm/app/src/main/res/layout/activity_main.xml
+++ b/EMailForm/app/src/main/res/layout/activity_main.xml
@@ -27,10 +27,9 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
+        android:layout_gravity="end"
         android:text="Kirim"
-        android:drawableLeft="@android:drawable/ic_dialog_email"
+        android:drawableStart="@android:drawable/ic_dialog_email"
         android:id="@+id/kirimButton"/>
-
 
 </LinearLayout>
