--- a/EMailForm/app/src/main/res/layout/activity_main.xml
+++ b/EMailForm/app/src/main/res/layout/activity_main.xml
@@ -23,13 +23,14 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_gravity="top"
-        android:hint="Pesan"/>
+        android:hint="Pesan"
+        android:id="@+id/textpesan"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
         android:text="Kirim"
-        android:drawableStart="@android:drawable/ic_dialog_email"
+        android:drawableLeft="@android:drawable/ic_dialog_email"
         android:id="@+id/kirimButton"/>
 
 </LinearLayout>
