--- a/Forex2/app/src/main/res/layout/layout_forex.xml
+++ b/Forex2/app/src/main/res/layout/layout_forex.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="5dp"
+    android:layout_margin="8dp"
     app:cardCornerRadius="12dp"
     app:cardElevation="4dp"
     app:cardBackgroundColor="@android:color/white">
@@ -18,12 +18,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/kodeTextView"
+            android:text="USD"
             android:textColor="@color/white"
             android:textSize="16sp"
-            android:textStyle="italic"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 <!--            app:layout_constraintHorizontal_bias="0.0"/>-->
 
         <TextView
@@ -31,41 +31,55 @@
             android:layout_height="wrap_content"
             android:id="@+id/kursTextView"
             android:textColor="@color/white"
+            android:text="12.987,07"
             android:textSize="16sp"
             android:textStyle="italic|bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintHorizontal_bias="0.0"/>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/namaTextView"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/colonTextView"
-            android:text=""
+            android:text="United States Dollar"
             android:textColor="@color/white"
-            android:textSize="16dp"
-            app:layout_constraintStart_toEndOf="@+id/kodeTextView"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@id/kursTextView"
-            app:layout_constraintHorizontal_bias="0"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp">
-        </TextView>
+            android:textSize="14sp"
+            android:textStyle="italic"
+            app:layout_constraintStart_toStartOf="@+id/kodeTextView"
+            app:layout_constraintTop_toBottomOf="@id/kodeTextView"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-        <TextView
-            android:id="@+id/kursIDTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="16dp"
-            app:layout_constraintStart_toEndOf="@+id/kursTextView"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="8dp">
-        </TextView>
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:id="@+id/colonTextView"-->
+<!--            android:text=""-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="16dp"-->
+<!--            app:layout_constraintStart_toEndOf="@+id/kodeTextView"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="@id/kursTextView"-->
+<!--            app:layout_constraintHorizontal_bias="0"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:layout_marginEnd="8dp">-->
+<!--        </TextView>-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/kursIDTextView"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:text="16.2"-->
+<!--            android:textSize="16dp"-->
+<!--            app:layout_constraintStart_toEndOf="@+id/kursTextView"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            android:layout_marginStart="8dp">-->
+<!--        </TextView>-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
